<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="?attr/selectableItemBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/device_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="@dimen/margin_normal"
                android:text="@string/app_name"
                android:textAllCaps="true"
                android:textSize="@dimen/text_medium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="@dimen/margin_normal"
                android:text="@string/disconnected"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="@dimen/text_small" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/device_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_normal"
            android:text="@string/mac_address"
            android:textSize="@dimen/text_normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/margin_normal"
                android:paddingLeft="@dimen/margin_normal"
                android:paddingRight="@dimen/margin_normal"
                android:paddingStart="@dimen/margin_normal"
                android:paddingEnd="@dimen/margin_normal"
                android:text="@string/control_device" />

            <Button
                android:id="@+id/btn_on_off"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_normal"
                android:layout_marginRight="@dimen/margin_normal"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginLeft="@dimen/margin_normal"
                android:text="@string/off"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:theme="@style/MyButton" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>